<resources>
    <string name="app_name">NudYim</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_event">Events</string>
    <string name="title_friend">Friends</string>
    <string name="title_all_user">NudYim User</string>
    <string name="menu_created">Created</string>
    <string name="date_picker_title">Picker Date</string>
    <string name="menu_done">Done</string>
    <string name="detail_text">DETAIL</string>
    <string name="budget_text">BUDGET</string>
    <string name="picture_text">PICTURE</string>
    <string name="schedule_text">SCHEDULE</string>
    <string name="chat_text">CHAT</string>
    <string name="sign_in">Sign In</string>
</resources>
