<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="false">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundChat">
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:weightSum="2"
            android:orientation="horizontal"
            tools:context="com.ayp.nudyim.TripFragment">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="5dp"
                android:weightSum="6"
                android:layout_weight="1">
                <RelativeLayout
                    android:id="@+id/detail_layout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:text="Detail"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorDetail">
                    <TextView
                        android:id="@+id/detail_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/detail_text"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <ImageView
                        android:id="@+id/image_detail"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_above="@id/detail_text"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="8dp"
                        android:src="@mipmap/ic_detail_2" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/budget_layout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1.5"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorBudget">
                    <TextView
                        android:id="@+id/budget_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/budget_text"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <ImageView
                        android:id="@+id/image_budget"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_above="@id/budget_text"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="8dp"
                        android:src="@mipmap/ic_money" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/picture_layout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="2.5"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorPicture">
                    <TextView
                        android:id="@+id/picture_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/picture_text"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <ImageView
                        android:id="@+id/image_picture"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_above="@id/picture_text"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="20dp"
                        android:src="@mipmap/ic_photo" />
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:weightSum="5"
                android:layout_weight="1">
                <RelativeLayout
                    android:id="@+id/schedule_layout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorSchedule">
                    <TextView
                        android:id="@+id/schedule_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/schedule_text"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <ImageView
                        android:id="@+id/image_schedule"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_above="@id/schedule_text"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="25dp"
                        android:src="@mipmap/ic_schedule" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/chat_layout"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="3"
                    android:layout_marginBottom="10dp"
                    android:background="@color/colorChat">
                    <TextView
                        android:id="@+id/chat_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/chat_text"
                        android:textColor="@color/colorWhite"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                    <ImageView
                        android:id="@+id/image_chat"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:src="@mipmap/ic_chat"
                        android:layout_centerVertical="true"
                        android:layout_alignParentStart="true" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
</ScrollView>
